2015-11-07  Gavin Smith  <gavinsmith0123@gmail.com>

	Comments and formatting changes.
	* install-info/install-info.c (parse_input): Combine a comment 
	with comment at start of function, and add more information.
	Change another comment.
	(install_entry_here): Formatting changes.
	(main) <not deleting>: Comment changed for grammar.

2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	Prevent line breaks in Chinese text in cross-refereces, reported 
	by Brendan O'Dea.	
	
	* tp/Texinfo/Convert/ParagraphNonXS.pm
	(set_space_protection): New parameter, 'double_width_no_break'.
	(add_text) <double-width character>: If 'double_width_no_break' 
	flag is on, accumulate double-width characters just as if 
	'protect_spaces' were on.
	* tp/Texinfo/Convert/Plaintext.pm (_convert) <Cross-reference 
	commands>.  Call set_space_protection to set 
	'double_width_no_break' for the output for the cross-reference.

	* tp/Texinfo/Convert/XSParagraph/xspara.c 
	(xspara_set_space_protection, xspara_add_text): Likewise.

2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/plaintext.t (east_asian_in_w): New test.
	* tp/t/input_files/east_asian_in_w.texi: Input file.
	* t/results/plaintext_tests/
	east_asian_in_w/res_plaintext/east_asian_in_w.txt: Reference 
	output file.

2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c:
	(xspara_add_text) <double-width character>: If protect_spaces is 
	on, accumulate double-width characters instead of sticking them 
	in the output right away.
	(xspara__add_pending_word): Comment changed.
	* tp/Texinfo/Convert/ParagraphNonXS.pm (add_text) <double-width
	text>: Likewise.

2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Use the correct symbol name 
	for the XS bootstrap function.  Print the name of the loaded 
	library file if debug output is on, as well as the name of the 
	bootstrap function.  Delay aliasing the loaded module to 